<resources>
    <string name="app_name">Attendura</string>
    <string name="Take_Button">Take Attendance</string>
    <string name="Log_Button">Attendance Log</string>
    <string name="Finder_Button">Attendance Search</string>
    <string name="Credit_Btn">Credits</string>
    <string name="Menu_Input">User Inputs</string>
    <string name="enter_first_roll_number">Enter First Roll number</string>
    <string name="enter_last_roll_number">Enter Last Roll number</string>
    <string name="submit">Submit</string>
    <string name="switch1">Switch</string>
    <string name="show">Show</string>
    <string name="save">Save</string>
</resources>
